force-app/main/default/objects/Contact/fields/Loyalty_Tier__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Tier__c</fullName>
    <label>Loyalty Tier</label>
    <type>Picklist</type>
    <description>Customer's Pronto loyalty tier. Informs the reimbursement loyalty uplift during service recovery.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>