force-app/main/default/objects/Contact/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>Text</type>
    <length>255</length>
</CustomField>